--- a/html/help.html
+++ b/html/help.html
@@ -9,10 +9,6 @@
     <body>
         <h1 class="title center">遊び方</h1>
         <button id="return">戻る</button>
-        <script>
-            $("#return").click(function(){
-                window.location.href="./Start.html"
-            })
-        </script>
+        <script src="../js/help.js"></script>
     </body>
 </html>
