--- a/html/game.html
+++ b/html/game.html
@@ -6,8 +6,12 @@
     <title>社長になろう</title>
 </head>
 <body>
-    <div class="user-box">
-        <p class="name1"></p>
+    <div id="user-box1" class="user-box">
+        <div id="user-frame1" class="user-frame"></div>
+        <h1>ナショナルエコノミー</h1>
+        <div id="user-frame2" class="user-frame"></div>
+    </div>
+        <!-- <p class="name1"></p>
         <div class="user-contents contents1">
             <p class="contents">&emsp;資産：￥<span>1000</span></p>
             <p class="contents employee">社員数：<span class="employee1"></span><span class="employee2"></span><span class="employee3"></span><span class="employee4"></span><span class="employee5"></span></p> 
@@ -90,5 +94,5 @@
             <button class="build-button2 hide">決定</button>
         </div>
     </div>
-    <script src="../js/game.js"></script>
+    <script src="../js/game.js"></script> -->
 </body>
