--- a/html/taiki.html
+++ b/html/taiki.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h1 class="center">あなたの会社名を決めましょう！</h1>
-    <div class="name-box center"><p id="pl1"></p><button class="button leave-button">退席</button></div>
-    <div class="name-box center"><p id="pl2"></p><button class="button leave-button">退席</button></div>
-    <div class="name-box center"><p id="pl3"></p><button class="button leave-button">退席</button></div>
-    <div class="name-box center"><p id="pl4"></p><button class="button leave-button">退席</button></div>
+    <div class="name-box center text-center"><p id="pl1"></p><button id="leave-btn1" class="button leave-button">退席</button></div>
+    <div class="name-box center text-center"><p id="pl2"></p><button id="leave-btn2" class="button leave-button">退席</button></div>
+    <div class="name-box center text-center"><p id="pl3"></p><button id="leave-btn3" class="button leave-button">退席</button></div>
+    <div class="name-box center text-center"><p id="pl4"></p><button id="leave-btn4" class="button leave-button">退席</button></div>
     <div class="center"><label id="error1" class="error">名前を入力してください!</label><label id="error2" class="error">名前が長すぎます!!!</label></div>
-    <div class="name-text center"><input type="text" required class="center"><button id="in-button" class="button">参加</button></div>
+    <div class="name-text center"><input type="text" required class="text-center"><button id="in-button" class="button">参加</button></div>
     <div class="center"><button id="ok-button" class="button" disabled>準備完了</button><button id="start-button" class="button" disabled>開始</button></div>
     <script src="../js/taiki.js"></script>
 </body>
