--- a/html/result.html
+++ b/html/result.html
@@ -12,27 +12,46 @@
         <div class="container">
             <p class="rank1">1位</p>
             <p class="rank2">2位</p>
+            <p class="rank3">3位</p>
+            <p class="rank4">4位</p>
         </div>
         
         <div class="container">
-            <p class="name1"></p>
             <p class="name2"></p>
+            <p class="name3"></p>
+            <p class="name4"></p>
+            <p class="name5"></p>
+
         </div>
         <div class="container">
             <p>得点:<label class="score"></label></p>
-            <p>得点:<label class="score">25606</label></p>
+            <p>得点:<label class="score"></label></p>
+            <p>得点:<label class="score"></label></p>
+            <p>得点:<label class="score"></label></p>
         </div>
         <div class="container">
             <p>所持金:<label class="test">43000円</label></p>
             <p>所持金:<label class="test">34000円</label></p>
+            <p>所持金:<label class="test">33000円</label></p>
+            <p>所持金:<label class="test">14000円</label></p>
         </div>
         <div class="container">
             <p>従業員数:<label class="test2">4</label>人</p>
             <p>従業員数:<label class="test2">5</label>人</p>
+            <p>従業員数:<label class="test2">6</label>人</p>
+            <p>従業員数:<label class="test2">7</label>人</p>
         </div>
         <div class="container">
             <p>借金:<label class="test3">0円</label></p>
             <p>借金:<label class="test3">3000円</label></p>
+            <p>借金:<label class="test3">2000円</label></p>
+            <p>借金:<label class="test3">1000円</label></p>
+        </div>
+        <div class="container">
+        <a href="#1" class="btn1-flat-vertical-border" >詳細</a>
+        <a href="#2" class="btn2-flat-vertical-border" >詳細</a>
+        <a href="#3" class="btn3-flat-vertical-border" >詳細</a>
+        <a href="#4" class="btn4-flat-vertical-border" >詳細</a>
         </div>
         
         <script src="../js/result.js"></script>
