--- a/html/result.html
+++ b/html/result.html
@@ -47,14 +47,31 @@
             <p>借金:<label class="test3">2000円</label></p>
             <p>借金:<label class="test3">1000円</label></p>
         </div>
-        
-        <div class="container">
-        <a href="#1" class="btn1-flat-vertical-border" >詳細</a>
-        <a href="#2" class="btn2-flat-vertical-border" >詳細</a>
-        <a href="#3" class="btn3-flat-vertical-border" >詳細</a>
-        <a href="#4" class="btn4-flat-vertical-border" >詳細</a>
+
+        <div id="modal-container">
+            <div class="modal-background">
+                <div class="modal">
+                    <h2>結果</label></h2>
+                    <h2>得点:<label class="score"></label></h2>
+                    <h2>所持金:<label class="test">43000円</label></h2>
+                    <h2>従業員数:<label class="test2">4</label>人</h2>
+                    <h2>借金:<label class="test3">0円</label></h2>
+                    <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
+                        preserveAspectRatio="none">
+                        <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
+                    </svg>
+                </div>
+            </div>
         </div>
-        
+        <div class="content">
+            <div class="buttons">
+                <div id="one" class="button">1位の詳細を表示</div>
+                <div id="two" class="button">2位の詳細を表示</div>
+                <div id="three" class="button">3位の詳細を表示</div>
+                <div id="four" class="button">4位の詳細を表示</div><br>
+            </div>
+        </div>
+
         <script src="../js/result.js"></script>
     </body>
     <section></section>
