--- a/html/result.html
+++ b/html/result.html
@@ -35,6 +35,7 @@
             <p>所持金:<label class="test">33000円</label></p>
             <p>所持金:<label class="test">14000円</label></p>
         </div>
+        
         <div class="container">
             <p>従業員数:<label class="test2">4</label>人</p>
             <p>従業員数:<label class="test2">5</label>人</p>
@@ -51,7 +52,7 @@
         <div id="modal-container">
             <div class="modal-background">
                 <div class="modal">
-                    <h2>結果</label></h2>
+                    <h2>結果詳細</label></h2>
                     <h2>得点:<label class="score"></label></h2>
                     <h2>所持金:<label class="test">43000円</label></h2>
                     <h2>従業員数:<label class="test2">4</label>人</h2>
